# macos-gpu-proc

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/darwin_perf/: __init__.py  _native.c  cli.py  gui.py  tui.py
src/macos_gpu_proc/: __init__.py  __main__.py  _native.c  cli.py  gui.py  tui.py
tests/: test_basic.py
