[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macos-gpu-proc"
version = "0.1.6"
description = "Per-process GPU utilization, CPU, memory, and energy monitoring for macOS Apple Silicon — no sudo needed."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Adam Mikulis"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["macos", "gpu", "monitoring", "apple-silicon", "metal", "mlx", "pytorch", "mps", "m1", "m2", "m3", "m4", "m5"]

[project.optional-dependencies]
tui = ["textual>=0.40"]
gui = ["pywebview>=5.0"]
all = ["textual>=0.40", "pywebview>=5.0"]

[project.scripts]
gpu-proc = "macos_gpu_proc.cli:main"

[project.urls]
Homepage = "https://github.com/adammikulis/macos-gpu-proc"
Issues = "https://github.com/adammikulis/macos-gpu-proc/issues"

[tool.setuptools.packages.find]
where = ["src"]
